deploy-app.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-chatbot-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch-chatbot-app-deployment
        version: v1
    spec:
      containers:
        - name: elasticsearch-chatbot-app
          image: maxshapiro32/elasticsearch-chatbot-app
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-chatbot-app-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32001
      name: http
  type: NodePort
  selector:
    name: elasticsearch-chatbot-app-deployment
