ingress-web.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  name: ingress-elasticsearch-chatbot-web
spec:
  tls:
    - hosts:
        - <IP_OR_SUBDOMAIN>
      secretName: elasticsearch-chatbot
  backend:
    serviceName: elasticsearch-chatbot-web-service
    servicePort: 3000
  rules:
    - host: <IP_OR_SUBDOMAIN>
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch-chatbot-web-service
              servicePort: 3000
